# HelperBox

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Emo.md  LICENSE  Makefile  README.md  get_pids.py  index.html  mkdocs.yml  requirements.txt  select_instance.py  test.cpp  test.py
.github/workflows/: documentation.yml
ChatCommands/: index.html
Uw/Db/: index.html
Uw/Emo/: index.html
Uw/Mesmer/: index.html
Uw/Ranger/: index.html
app/: CMakeLists.txt  HelperBox.rc  Inject.cpp  Inject.h  Path.cpp  Path.h  Process.cpp  Process.h  Registry.cpp  Registry.h  Settings.cpp  Settings.h  Str.cpp  Str.h  Thread.cpp  Thread.h  Window.cpp  Window.h  main.cpp  resources.h  stdafx.h
docs/: ChatCommands.md  Db.md  Emo.md  Mainteam.md  Mesmer.md  Spiker.md  Terra.md  index.md
docs/General/: HeroWindow.md
docs/Uw/: Db.md  Emo.md
scrips/: rectangle.py  view.py
search/: search_index.json
src/: CMakeLists.txt  main.cpp  stdafx.h
src/Actions/: ActionsBase.cpp  ActionsBase.h  ActionsMove.cpp  ActionsMove.h  CMakeLists.txt
src/Data/: AgentData.cpp  CMakeLists.txt  DataPlayer.cpp  DataPlayer.h  DataSkill.cpp  DataSkill.h  DataSkillbar.h  DataSkillbarUw.h  PlayerData.cpp  PlayerData.h  SkillData.cpp  SkillData.h  SkillbarData.h  SkillbarDataUw.h
src/Helper/: ActionBaseClass.h  Actions.cpp  Actions.h  AgentData.cpp  AgentData.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Coloring.h  GuiConstants.h  GuiUtils.cpp  GuiUtils.h  Helper.cpp  Helper.h  HelperAgents.cpp  HelperAgents.h  HelperCallbacks.cpp  HelperCallbacks.h  HelperItems.cpp  HelperItems.h  HelperMaps.cpp  HelperMaps.h  HelperPlayer.cpp  HelperPlayer.h  HelperUw.cpp  HelperUw.h  HelperUwPos.cpp  HelperUwPos.h  MathUtils.cpp  MathUtils.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerData.cpp  SafeFuncs.cpp  SafeFuncs.h  Skillbars.h  Skilldata.h  Types.cpp  (+5 more)
src/Main/: AutoFollowWindow.cpp  AutoFollowWindow.h  CMakeLists.txt  CancelActionWindow.cpp  CancelActionWindow.h  ChatCommands.cpp  ChatCommands.h  ChestRunnerWindow.cpp  ChestRunnerWindow.h  DbWindow.cpp  DbWindow.h  DhuumStatsWindow.cpp  DhuumStatsWindow.h  EmoWindow.cpp  EmoWindow.h  HelperBox.cpp  HelperBox.h  HelperBoxModule.cpp  HelperBoxSettings.cpp  HelperBoxSettings.h  HelperBoxTheme.h  HelperBoxUIElement.cpp  HelperBoxUIElement.h  HelperBoxWindow.cpp  HelperBoxWindow.h  MainWindow.cpp  MainWindow.h  MainteamWindow.cpp  MainteamWindow.h  MesmerWindow.cpp  MesmerWindow.h  SettingsWindow.cpp  SettingsWindow.h  SpikerWindow.cpp  SpikerWindow.h  TerraWindow.cpp  TerraWindow.h
src/Main/Base/: ChatCommands.cpp  ChatCommands.h  HelperBox.cpp  HelperBox.h  HelperBoxModule.cpp  HelperBoxModule.h  HelperBoxSettings.cpp  HelperBoxSettings.h  HelperBoxTheme.cpp  HelperBoxTheme.h  HelperBoxUIElement.cpp  HelperBoxUIElement.h  HelperBoxWindow.cpp  HelperBoxWindow.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h
src/Main/Features/: AutoFollowWindow.cpp  AutoFollowWindow.h  CancelActionWindow.cpp  CancelActionWindow.h  DbWindow.cpp  DbWindow.h  DhuumStatsWindow.cpp  DhuumStatsWindow.h  EmoWindow.cpp  EmoWindow.h  MainteamWindow.cpp  MainteamWindow.h  TerraWindow.cpp  TerraWindow.h
src/Main/Features/General/: AutoFollowWindow.cpp  AutoFollowWindow.h  CancelActionWindow.cpp  CancelActionWindow.h  ChatCommands.cpp  ChatCommands.h  HeroWindow.cpp  HeroWindow.h
src/Main/Features/Uw/: DbWindow.cpp  DbWindow.h  DhuumStatsWindow.cpp  DhuumStatsWindow.h  EmoWindow.cpp  EmoWindow.h  MainteamWindow.cpp  MainteamWindow.h  TerraWindow.cpp  TerraWindow.h  UwDhuumBitch.cpp  UwDhuumBitch.h  UwDhuumStats.cpp  UwDhuumStats.h  UwEmo.cpp  UwEmo.h  UwHelperBase.h  UwHelperWindowBase.h  UwMesmer.cpp  UwMesmer.h  UwMetadata.cpp  UwMetadata.h  UwRanger.cpp  UwRanger.h
src/Main/Windows/: AutoFollowWindow.cpp  AutoFollowWindow.h  CancelActionWindow.h  DbWindow.cpp  DbWindow.h  DhuumStatsWindow.cpp  DhuumStatsWindow.h  EmoWindow.cpp  EmoWindow.h  MainteamWindow.cpp  MainteamWindow.h  SettingsWindow.cpp  SettingsWindow.h  TerraWindow.cpp  TerraWindow.h
src/Types/: Actions.cpp  Actions.h  ActionsUw.h  AgentLivingData.cpp  AgentLivingData.h  CMakeLists.txt  Move.cpp  Move.h  PlayerData.cpp  PlayerData.h  SkillbarData.h  Skillbars.h  Types.cpp  Types.h
src/Utils/: CMakeLists.txt  Defines.h  GuiConstants.h  GuiUtils.cpp  GuiUtils.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  Path.cpp  Path.h  Timer.h  stdafx.h
